# mynote-app

./: build.gradle  settings.gradle
presentation/: CMakeLists.txt  build.gradle
presentation/src/main/cpp/: OtpJNI.cpp
presentation/src/main/res/color/: checkbox_state_checked.xml
presentation/src/main/res/drawable/: add_note.xml  baseline_arrow_forward_ios_24.xml  border_item_date_time_pickers.xml  border_top_background_light.xml  border_top_background_night.xml  checkbox_state_checked.xml  home.xml  icon_backup_device.xml  icon_basketball.xml  icon_biometric.xml  icon_book.xml  icon_calendar.xml  icon_camping.xml  icon_category.xml  icon_choose_color.xml  icon_choose_image.xml  icon_choose_record.xml  icon_date_picker.xml  icon_default.xml  icon_delete.xml  icon_delete_image_edit_note.xml  icon_dots.xml  icon_edit.xml  icon_ex.xml  icon_gym.xml  icon_home.xml  icon_morning.xml  icon_movie.xml  icon_notification.xml  icon_office.xml  icon_phone.xml  icon_pill.xml  icon_pizza.xml  icon_privacy_policy.xml  icon_rate_app.xml  icon_share_app.xml  icon_shopping.xml  icon_study.xml  icon_train.xml  icon_travel.xml  (+8 more)
presentation/src/main/res/layout/: dialog_choose_image_add_note.xml  dialog_setting_note.xml  dialog_time_format.xml  fragment_biometric_dialog.xml  fragment_camera_dialog.xml  fragment_category.xml  fragment_change_unlock_code.xml  fragment_date_time_pickers.xml  fragment_home.xml  fragment_image_note.xml  fragment_list_category.xml  fragment_list_dialog.xml  fragment_list_note.xml  fragment_main.xml  fragment_note.xml  fragment_progress_bar_dialog.xml  (+18 more)
(+311 files in other folders)
